# C0ver_letter_bot

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
homeworks/HW1/: HW1_Light.ipynb
main/: 1test.py  33333333.py  api_openai.py  app.py  config.json  config.py  final.py  main.py  rezume_parsing.py  ssss.py  test.py  test_vacancy.py  vacancy_parsing.py
